--- a/sites/all/modules/yad7/admin_menu/admin_menu-rtl.css
+++ b/sites/all/modules/yad7/admin_menu/admin_menu-rtl.css
@@ -1,4 +1,3 @@
-
 #admin-menu {
   text-align: right;
 }
@@ -25,7 +24,7 @@
   border-right: 0;
 }
 #admin-menu .dropdown .admin-menu-tab a {
-  border-left: 1px solid #52565E;
+  border-left: 1px solid #52565e;
   border-right: 0;
 }
 #admin-menu .dropdown li li a {
